--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -227,45 +227,45 @@
 /**
  * Posts
  */
-// .post-header {
-//   margin-bottom: $spacing-unit;
-// }
+.post-header {
+  margin-bottom: $spacing-unit;
+}
 
-// .post-title,
-// .post-content h1 {
-//   @include relative-font-size(2.625);
-//   letter-spacing: -1px;
-//   line-height: 1;
+.post-title,
+.post-content h1 {
+  @include relative-font-size(2.625);
+  letter-spacing: -1px;
+  line-height: 1;
 
-//   @media screen and (min-width: $on-large) {
-//     @include relative-font-size(2.625);
-//   }
-// }
+  @media screen and (min-width: $on-large) {
+    @include relative-font-size(2.625);
+  }
+}
 
-// .post-content {
-//   margin-bottom: $spacing-unit;
+.post-content {
+  margin-bottom: $spacing-unit;
 
-//   h2 {
-//     @include relative-font-size(1.75);
+  h2 {
+    @include relative-font-size(1.75);
 
-//     @media screen and (min-width: $on-large) {
-//       @include relative-font-size(2);
-//     }
-//   }
+    @media screen and (min-width: $on-large) {
+      @include relative-font-size(2);
+    }
+  }
 
-//   h3 {
-//     @include relative-font-size(1.375);
+  h3 {
+    @include relative-font-size(1.375);
 
-//     @media screen and (min-width: $on-large) {
-//       @include relative-font-size(1.625);
-//     }
-//   }
+    @media screen and (min-width: $on-large) {
+      @include relative-font-size(1.625);
+    }
+  }
 
-//   h4 {
-//     @include relative-font-size(1.125);
+  h4 {
+    @include relative-font-size(1.125);
 
-//     @media screen and (min-width: $on-large) {
-//       @include relative-font-size(1.25);
-//     }
-//   }
-// }
+    @media screen and (min-width: $on-large) {
+      @include relative-font-size(1.25);
+    }
+  }
+}
