--- a/_sass/minima/_type.scss
+++ b/_sass/minima/_type.scss
@@ -2,37 +2,37 @@
 //
 // Headings, body text, lists, and other misc typographic elements.
 
-// h1, h2, h3, h4, h5, h6 {
-//   margin-bottom: .5rem;
-//   font-weight: 600;
-//   line-height: 1.25;
-//   color: #313131;
-//   text-rendering: optimizeLegibility;
-// }
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: .5rem;
+  font-weight: 600;
+  line-height: 1.25;
+  color: #313131;
+  text-rendering: optimizeLegibility;
+}
 
-// h1 {
-//   font-size: 2rem;
-// }
+h1 {
+  font-size: 2rem;
+}
 
-// h2 {
-//   margin-top: 1rem;
-//   font-size: 1.5rem;
-// }
+h2 {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+}
 
-// h3 {
-//   margin-top: 1.5rem;
-//   font-size: 1.25rem;
-// }
+h3 {
+  margin-top: 1.5rem;
+  font-size: 1.25rem;
+}
 
-// h4, h5, h6 {
-//   margin-top: 1rem;
-//   font-size: 1rem;
-// }
+h4, h5, h6 {
+  margin-top: 1rem;
+  font-size: 1rem;
+}
 
-// p {
-//   margin-top: 0;
-//   margin-bottom: 1rem;
-// }
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
 
 strong {
   color: #303030;
