--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,14 +5,19 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
-      {%- endif -%}</p>
+    <section class="post-meta">
+      <div class="post-date">{{ page.date | date: "%B %-d, %Y" }}</div>
+      <div class="post-categories">
+      {% if page.categories.size > 0 %}in {% for cat in page.categories %}
+        <a href="{{ site.baseurl }}/posts/#{{ cat }}">{{ cat | capitalize }}</a>{% if forloop.last == false %}, {% endif %}
+      {% endfor %}{% endif %}
+      </div>
+      <div class="post-author">
+        {%- if page.author -%}
+          • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
+        {%- endif -%}
+      </div>
+    </section>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
