소셜 아이콘 짤림 현상 수정

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -241,7 +241,8 @@ pre {
     height: 18px;
     display: inline-block;
     fill: currentColor;
-    padding-right: 5px;
+    padding-right: 0px;
+    margin-right: 5px;
     vertical-align: text-bottom;
 }
 
