--- a/_sass/minima/_type.scss
+++ b/_sass/minima/_type.scss
@@ -10,6 +10,18 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 
+h2 {
+  margin-top: 3rem;
+}
+
+h3 {
+  margin-top: 2rem;
+}
+
+h4, h5, h6 {
+  margin-top: 1rem;
+}
+
 // h1 {
 //   font-size: 2rem;
 // }
