--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,12 @@
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/assets/icons/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/icons/favicon.ico">
   {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+  {%- if jekyll.environment == 'production' -%}
+    {%- if site.google_analytics -%}
+      {%- include google-analytics.html -%}
+    {%- endif -%}
+    {%- if site.clarity -%}
+      {%- include clarity.html -%}
+    {%- endif -%}
   {%- endif -%}
 </head>
